cleaned up old code + finished remaking the website